# ViT_cpp_experiment

./: .gitignore  main.py  readme.md
inference/: CMakeLists.txt  main.cpp
